--- a/assg2.css
+++ b/assg2.css
@@ -8,15 +8,13 @@ ul{
     list-style: none;
 }
 
+
+
 a{
     text-decoration: none;
 }
 
-.active{
-    color: whitesmoke;
-    text-decoration: underline;
-    font-weight: bold;
-}
+
 body , html{
     overflow-x: hidden;
 }
@@ -38,6 +36,14 @@ body , html{
     justify-content: space-between;
     padding: 20px;
     color: whitesmoke;
+}
+
+.menu button{
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    width: 30px;
+    cursor: pointer;
 }
 
 header{
@@ -75,6 +81,15 @@ header{
     background-color: rgb(248, 245, 242);
     border-radius: 30px;
     color: rgb(119, 145, 164);
+}
+
+.menu-btn{
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    width: 40px;
+    cursor: pointer;
+
 }
 
 section{
@@ -240,84 +255,227 @@ P{
 }
 
 
-.user-details{
-    width: 400px;
-    margin: 100px auto 0px auto;
-
-}
-
-h2{
-    text-align: center;
-    padding: 20px;
-    font-family: Arial, Helvetica, sans-serif;
-
-}
-
-
-.register{
-    background-color: rgb(119, 145, 164) ;
+body{
+    background: #ffffff;
+    padding: 0 10px;
+  }
+  .wrapper{
+    max-width: 500px;
     width: 100%;
-    font-size: 18px;
-    border-radius: 10px;
-    border: 1px solid rgba(255,255,255,0.3);
-    box-shadow: 2px 2px 15px rgba(0,0,0.3);
-    color: white;
-
-}
-
-
-#register{
-    margin: 40px;
-
-}
-
-Label{
-    font-family: sans-serif;
-    font-size: 18px;
-    font-style: italic;
-
-}
-
-#name{
-    width: 300px;
-    border: 1px solid #ddd;
+    background: #fff;
+    margin: 50px auto;
+    box-shadow: 2px 2px 4px rgba(0,0,0,0.125);
+    padding: 30px;
+  }
+  
+  .wrapper .title{
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 25px;
+    color: black;
+    text-transform: uppercase;
+    text-align: center;
+  }
+  
+  .wrapper .form{
+    width: 100%;
+  }
+  
+  .wrapper .form .inputfield{
+    margin-bottom: 15px;
+    display: flex;
+    align-items: center;
+  }
+  
+  .wrapper .form .inputfield label{
+     width: 200px;
+     color: #757575;
+     margin-right: 10px;
+    font-size: 14px;
+  }
+  
+  .wrapper .form .inputfield .input,
+  .wrapper .form .inputfield .textarea{
+    width: 100%;
+    outline: none;
+    border: 1px solid #d5dbd9;
+    font-size: 15px;
+    padding: 8px 10px;
     border-radius: 3px;
-    outline: 0;
-    padding: 7px;
-    background-color: #fff;
-    box-shadow:inset 1px 1px 1px 5px rgba(0,0,0,0.3);
-}
-
-#submit{
-    width: 200px;
-    padding: 7px;
-    font-family: sans-serif;
-    font-size: 16px;
-    border: none;
+    transition: all 0.3s ease;
+  }
+  
+  .wrapper .form .inputfield .textarea{
+    width: 100%;
+    height: 125px;
+    resize: none;
+  }
+  
+  .wrapper .form .inputfield .custom_select{
+    position: relative;
+    width: 100%;
+    height: 37px;
+  }
+  
+  .wrapper .form .inputfield .custom_select:before{
+    content: "";
+    position: absolute;
+    top: 12px;
+    right: 10px;
+    border: 8px solid;
+    border-color: #d5dbd9 transparent transparent transparent;
+    pointer-events: none;
+  }
+  
+  .wrapper .form .inputfield .custom_select select{
+    -webkit-appearance: none;
+    -moz-appearance:   none;
+    appearance:        none;
+    outline: none;
+    width: 100%;
+    height: 100%;
+    border: 0px;
+    padding: 8px 10px;
+    font-size: 15px;
+    border: 1px solid #d5dbd9;
     border-radius: 3px;
-    background-color: rgba(250,100,0,0.8);
+  }
+  
+  
+  .wrapper .form .inputfield .input:focus,
+  .wrapper .form .inputfield .textarea:focus,
+  .wrapper .form .inputfield .custom_select select:focus{
+    border: 1px solid #bde1f3;
+  }
+  
+  .wrapper .form .inputfield p{
+     font-size: 14px;
+     color: #757575;
+  }
+  .wrapper .form .inputfield .check{
+    width: 15px;
+    height: 15px;
+    position: relative;
+    display: block;
     cursor: pointer;
-    border: rgba(255,255,0.3);
-    box-shadow: 1px 1px 5px rgba(0,0,0,0.3);
-    margin-bottom: 20px;
-}
+  }
+  .wrapper .form .inputfield .check input[type="checkbox"]{
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+  }
+  .wrapper .form .inputfield .check .checkmark{
+    width: 15px;
+    height: 15px;
+    border: 1px solid #bde1f3;
+    display: block;
+    position: relative;
+  }
+  .wrapper .form .inputfield .check .checkmark:before{
+    content: "";
+    position: absolute;
+    top: 1px;
+    left: 2px;
+    width: 5px;
+    height: 2px;
+    border: 2px solid;
+    border-color: transparent transparent #fff #fff;
+    transform: rotate(-45deg);
+    display: none;
+  }
+  .wrapper .form .inputfield .check input[type="checkbox"]:checked ~ .checkmark{
+    background: #bde1f3;
+  }
+  
+  .wrapper .form .inputfield .check input[type="checkbox"]:checked ~ .checkmark:before{
+    display: block;
+  }
+  
+  .wrapper .form .inputfield .btn{
+    width: 100%;
+     padding: 8px 10px;
+    font-size: 15px; 
+    border: 0px;
+    background:  black;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 3px;
+    outline: none;
+  }
+  
+  .wrapper .form .inputfield .btn:hover{
+    background: #bde1f3;
+  }
+  
+  .wrapper .form .inputfield:last-child{
+    margin-bottom: 0;
+  }
 
-label,span,h2{
-    text-shadow: 1px 1px 5px rgba(0,0,0,0.3);
-    
+
+section{
+    width: 80%;
+    margin: 80px auto;
 }
 
 
 .contact{
-    position: relative;
-    min-height: 100vh;
-    padding: 50px 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: rgb(207, 233, 224);
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding: 100px;
+}
 
+.cnt-row{
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.cnt-col{
+    flex-basis: 41%;
+    background-color:rgb(210, 222, 230);
+    border-radius: 10px;
+    margin-bottom: 5%;
+    padding: 20px 12px;
+    box-sizing: border-box;
+    transition: 0.5s;
+    
+}
+
+.cnt-col:hover {
+    box-shadow: 0 0 20px 0px rgba(0,0,0,0.2) ;
+}
+
+
+
+
+.contact{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding: 100px;
+}
+
+.cnt-row{
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.cnt-col{
+    flex-basis: 41%;
+    background-color:white ;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    padding: 20px 12px;
+    box-sizing: border-box;
+    transition: 0.5s;
+    
+}
+
+.cnt-col:hover {
+    box-shadow: 0 0 20px 0px rgba(0,0,0,0.2) ;
 }
 
 
@@ -328,18 +486,11 @@ label,span,h2{
 
 
 
-@media (max-width:700px){
+@media only screen and (max-width:640px){
 
-    .facility-col img{
-        margin-left: 0px;
-        margin-right: 15px;
-    }
+    
 
-    .row{
-        flex-direction: column;
-        
-    }
-    .navbar{
+     .navbar{
         padding: 0;
     }
     .logo{
@@ -352,10 +503,41 @@ label,span,h2{
         width: 100%;
         height: 100vh;
         justify-content: center;
-        background-color: bisque;
+        background-color: rgb(45, 94, 150);
         margin-top: -900px;
     }
+
+    .mobile-menu{
+        margin-top: 0px;
+    }
+
     .nav-linksli{
         margin: 30px auto;
     }
+
+
+    .row{
+        flex-direction: column;
+    }
+
+    .facility-col img{
+        margin-left: 0px;
+        margin-right: 15px;
+    }
+
+    
+
+    .wrapper .form .inputfield{
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      .wrapper .form .inputfield label{
+        margin-bottom: 5px;
+      }
+      .wrapper .form .inputfield.terms{
+        flex-direction: row;
+      }
+      .cnt-row{
+        flex-direction: column;
+      }
 }
